--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,9 @@ body {
   font-family: 'Source Sans Pro';
   background: #222;
   color: #f5f5f5;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  word-break: break-word;
 }
 
 p {
