--- a/css/style.css
+++ b/css/style.css
@@ -187,7 +187,7 @@ button {
   display: inline-block;
   *display: inline;
   padding: 4px 12px;
-  margin-top: .5em;
+  margin-top: 0;
   margin-bottom: 0;
   *margin-left: .3em;
   font-size: 14px;
