--- a/css/style.css
+++ b/css/style.css
@@ -202,6 +202,8 @@ form.search {
   text-decoration: none;
 }
 
+.avatar { width: 25px; height: 25px; vertical-align: middle; border-radius: 5px; margin-right: .2em; }
+
 button {
   display: inline-block;
   *display: inline;
