--- a/css/style.css
+++ b/css/style.css
@@ -202,6 +202,7 @@ form.search {
   text-decoration: none;
 }
 
+.profileAvatar { width: 75px; vertical-align: top; border-radius: 5px; margin-right: .25em; margin-bottom: .25em;}
 .avatar { width: 25px; height: 25px; vertical-align: middle; border-radius: 5px; margin-right: .2em; }
 
 button {
