--- a/css/style.css
+++ b/css/style.css
@@ -66,8 +66,29 @@ hr {
 
 #scroller:last-child { margin-bottom: 10em; }
 
-.message, .message > *, .navbar, .navbar > * {
+.message, .message > *, .navbar, .navbar > *, #ad, #ad > * {
   animation: fadein .5s;
+}
+
+#ad {
+  background: white;
+  font-size: .8em;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  position: fixed;
+  padding: .3em .5em; 
+  bottom: 5px;
+  left: 5px;
+  width: 250px;
+}
+
+#ad button {
+  font-size: .8em;
+  margin: 0;
+  padding: 0;
+  padding-left: 5px; padding-right: 5px;
+  position: absolute;
+  bottom: 2px; right: 2px;
 }
 
 @keyframes fadein {
