--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ hr {
 }
 
 #scroller {
-  max-width: 50em;
+  max-width: 680px;
   margin-right: auto;
   margin-left: auto;
 }
@@ -172,8 +172,8 @@ textarea {
   position: fixed;
   z-index: 1000;
   margin: 0;
-  padding-top: .3em;
-  padding-bottom: .3em;
+  padding-top: .33em;
+  padding-bottom: .27em;
   left: 0; right: 0;
   top: 0;
 }
