--- a/css/style.css
+++ b/css/style.css
@@ -228,8 +228,10 @@ form.search {
   text-decoration: none;
 }
 
-.profileAvatar { width: 75px; vertical-align: top; border-radius: 5px; margin-right: .25em; margin-bottom: .25em;}
-.avatar { width: 25px; height: 25px; vertical-align: middle; border-radius: 5px; margin-right: .2em; }
+.profileAvatar { width: 75px; vertical-align: top; border-radius: 5px; object-fit: cover; margin-right: .25em; margin-bottom: .25em;}
+.avatar { width: 25px; height: 25px; vertical-align: middle; object-fit: cover; border-radius: 5px; margin-right: .2em; }
+
+.image { width: 75px; height: 75px; object-fit: cover; margin-right: .2em; border-radius: 5px;}
 
 button {
   display: inline-block;
