--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ hr {
 
 #scroller:last-child { margin-bottom: 10em; }
 
-.message, .message > *, .navbar, .navbar > *, #ad, #ad > * {
+.message, .message > *, .navbar, .navbar > *, #ad, #ad > *, #viewer > * {
   animation: fadein .5s;
 }
 
