--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background: #111; 
+  background: #222; 
   color: #f5f5f5; 
   font-family: monospace; 
   width: 680px; 
@@ -11,11 +11,41 @@ body {
   line-height: 1.25em;
 }
 
-.right {float: right;}
+br {
+  line-height: .5em;
+}
+
+.message {
+  background: #333;
+  margin-top: .5em;
+  padding: .5em;
+  border-radius: 5px;
+}
+
+.content {
+  margin-top: .5em;
+}
+
+.navbar {
+  margin-bottom: .5em;
+}
+
+.right {float: right; margin-left: .5em;}
 
 a {color: cyan;}
 
-textarea {width: 100%;}
+textarea, input {
+  color: #f5f5f5;
+  background: #333;
+  border: none;
+  border-radius: 5px;
+}
+
+textarea {
+  width: 100%; 
+  margin-bottom: .5em;
+  height: 50px;
+}
 
 .thoreau {
   filter: brightness(1.1) hue-rotate(-10deg) sepia(0.3) saturate(1.6);
