--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,8 @@ body {
   background: #222; 
   color: #f5f5f5;
   font-family: 'Source Sans Pro'; 
-  width: 680px; 
+  width: 680px;
+  max-width: 94%; 
   margin-left: auto; 
   margin-right: auto;
   overflow-wrap: break-word;
@@ -11,6 +12,14 @@ body {
   line-height: 1.25em;
 }
 
+.navbar {
+  margin: .5em;
+}
+
+@media only screen and (max-width: 480px) {
+  body { margin: .5em; }
+  .navbar { margin-bottom: 2em;}
+}
 
 p {
   margin-top: .5ex;
@@ -59,9 +68,6 @@ br {
   margin-top: .5em;
 }
 
-.navbar {
-  margin-bottom: .5em;
-}
 
 img, canvas { max-width: 100%; border-radius: 5px;}
 
@@ -78,6 +84,11 @@ textarea, input {
   background: #333;
   border: none;
   border-radius: 5px;
+}
+
+textarea:focus {
+  outline: none;
+  background: #222;
 }
 
 textarea {
