--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,15 @@ br {
   border-radius: 5px;
 }
 
+.message, .message > * {
+  animation: fadein .5s;
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
 .reply {
   margin-left: 1em;
 }
@@ -74,7 +83,12 @@ br {
   margin-top: .5em;
 }
 
-img, canvas { max-width: 100%; border-radius: 5px;}
+img, canvas {
+  margin-bottom: .5em;
+  max-width: 100%; 
+  border-radius: 5px;
+  transition: all .1s ease-in-out;
+}
 
 .right {float: right; margin-left: .5em;}
 
