--- a/css/style.css
+++ b/css/style.css
@@ -145,3 +145,12 @@ textarea {
   filter: sepia(0.3) contrast(1.1) brightness(1.1) grayscale(0.8);
 }
 
+.yeats {
+    filter: brightness(1.1) sepia(0.1) contrast(1.1) brightness(1.3) saturate(1.9)
+}
+.yeats::after {
+  background: #b9bdbb;
+  mix-blend-mode: screen;
+  opacity: .2;
+}
+
