--- a/css/style.css
+++ b/css/style.css
@@ -1,34 +1,49 @@
 body {
+  margin: 0;
   background: #222; 
   color: #f5f5f5;
   font-family: 'Source Sans Pro'; 
-  width: 680px;
-  max-width: 94%; 
-  margin-left: auto; 
-  margin-right: auto;
   overflow-wrap: break-word;
   word-wrap: break-word;
   word-break: break-word;
   line-height: 1.25em;
 }
 
+#scroller {
+  margin-top: 40px;
+  width: 680px;
+  max-width: 94%; 
+  margin-left: auto; 
+  margin-right: auto;
+}
+
 .navbar {
-  margin: .5em;
+  width: 100%;
+  position: fixed;
+  padding-top: 1em;
+  padding-bottom: .3em;
+  top: 0;
+  z-index: 1000;
+  background: #333;
+  left: 0; right: 0; top: 0;
+}
+
+.navbar .internal {
+  max-width: 97%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .banner {
   height: 0;
-  border-radius: 5px;
-  margin-bottom: .5em;
 }
 
 @media only screen and (max-width: 480px) {
-  body { margin: .5em; }
-  .navbar { margin-bottom: 2em;}
+  body { margin-top: 5em; }
 }
 
 .profileImage {
-  width: 175px;
+  width: 125px;
   margin-top: .5em;
   margin-left: .5em;
   margin-right: .5em;
@@ -36,7 +51,7 @@ body {
 }
 
 .inner-profile {
-  min-height: 190px;
+  min-height: 135px;
 }
 
 .avatar {
