--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,13 @@ p {
 pre, code {
   font-size: 1em;
   color: #ccc;
+  overflow: auto;
+  word-break: break-all;
+  word-wrap: break-word;
+  white-space: pre;
+  white-space: -moz-pre-wrap;
+  white-space: pre-wrap;
+  white-space: pre\9;
 }
 
 #screen {
