--- a/css/structure.css
+++ b/css/structure.css
@@ -57,12 +57,6 @@ pre, code {
   margin-right: auto;
 }
 
-@media only screen and (max-width: 680px) {
-  #screen { top: 4em; }
-  #scroller {max-width: 100%;}
-  textarea { height: 200px;}
-}
-
 img {margin-top: .5em;}
 
 .profileImage {
@@ -163,6 +157,13 @@ textarea {
   font-size: 1em;
   border: none;
   border-radius: 5px;
+  height: 100px;
+}
+
+@media only screen and (max-width: 680px) {
+  #screen { top: 4em; }
+  #scroller {max-width: 100%;}
+  textarea { height: 200px;}
 }
 
 input {
