--- a/css/custom.css
+++ b/css/custom.css
@@ -1,9 +1,23 @@
 /* put your custom css theme in this file */
 
 body, button, textarea, input {
-  font-family: 'Source Sans Pro'; 
+  font-family: "Source Sans Pro";
 }
 
-.navbar, .profile, .message {
-  background: #f5f5f5;
+.navbar {
+  background: #ccc;
 }
+
+.profile, .message {
+  background: #f5f5f5;
+  color: #333;
+}
+
+body {
+  background: #ccc;
+}
+
+.navbar .message {
+  background: #ccc;
+}
+
