--- a/css/darktheme.css
+++ b/css/darktheme.css
@@ -22,6 +22,11 @@ hr {
 
 a, .navbar a {color: cyan;}
 
+.navbar .message {
+  color: #f5f5f5;
+  background: #333;
+}
+
 textarea, input {
   color: #f5f5f5;
   background: #444;
