--- a/css/darktheme.css
+++ b/css/darktheme.css
@@ -34,6 +34,7 @@ a, .navbar a {color: cyan;}
 textarea, input {
   color: #f5f5f5;
   background: #444;
+  border: 1px solid #111;
 }
 
 textarea:focus {
