--- a/css/structure.css
+++ b/css/structure.css
@@ -169,7 +169,7 @@ textarea {
   margin-top: .5em;
   margin-bottom: .5em;
   font-size: 1em;
-  border: none;
+  border: 1px solid #ccc;
   border-radius: 5px;
   height: 100px;
 }
@@ -183,7 +183,7 @@ textarea {
 
 input {
   font-size: 1em;
-  border: none;
+  border: 1px solid #ccc;
   border-radius: 5px;
   margin-right: 1px;
 }
