--- a/css/structure.css
+++ b/css/structure.css
@@ -174,6 +174,14 @@ textarea {
   height: 100px;
 }
 
+iframe {
+  width: 100%; 
+  max-width: 100%; 
+  height: 400px; 
+  max-height: 680px;
+  border: 1px solid #ccc;
+}
+
 @media only screen and (max-width: 680px) {
   #screen { top: 4em; }
   #scroller {max-width: 100%;}
