--- a/css/custom.css
+++ b/css/custom.css
@@ -9,24 +9,20 @@ body, button, textarea, input {
 }
 
 .profile, .message {
-  background: #f5f5f5;
+  background: #fff;
   color: #333;
 }
 
 body {
-  background: #e0e0e0;
+  background: #f5f5f5;
 }
 
-.navbar .message {
+.navbar {
   background: #fff;
 }
 
 blockquote {
   border-left: 2px solid #008b8b;
-}
-
-a {
-  color: #008b8b;
 }
 
 pre, code {
