--- a/css/darktheme.css
+++ b/css/darktheme.css
@@ -13,6 +13,7 @@ pre, code {
 
 .navbar {
   background: #333;
+  border-bottom: 1px solid #444;
 }
 
 hr {
@@ -22,6 +23,7 @@ hr {
 .profile, .message {
   background: #333;
   color: #f5f5f5;
+  border: 1px solid #444;
 }
 
 .navbar .message {
