--- a/css/structure.css
+++ b/css/structure.css
@@ -57,7 +57,7 @@ pre, code {
   width: 100%;
   height: 25px;
   position: fixed;
-  padding-top: .2em;
+  padding-top: .25em;
   padding-bottom: .2em;
   top: 0;
   z-index: 1000;
@@ -184,9 +184,9 @@ iframe {
 
 @media only screen and (max-width: 680px) {
   #screen { top: 31px; }
-  #scroller {max-width: 100%;}
+  #scroller {max-width: 98%;}
   textarea { height: 125px;}
-  .navbar .message { margin-top: 1.7em; }
+  .navbar .message { margin-top: 1.7em; margin-left: 3px; margin-right: 3px; }
 }
 
 input {
